# GAD

./: .gitignore  CLAUDE_ENGINEERING.md  CLAUDE_ONBOARDING.md  CLAUDE_QUICK.md  DESIGN.md  GAD-design.md  LICENSE  LICENSE-engine  LICENSE-schema  README.md  TODOS.md  app.py  claude.md  fly.toml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: fly-deploy.yml
.streamlit/: config.toml
dashboard/: Dockerfile  app.py
dashboard/components/: __init__.py  auth.py  backtest_chart.py  confusion_matrix.py  footer.py  lloyds_checklist.py  score_card.py  (+2 more)
data/: manifest.yaml
docs/: API_GUIDE.md  DEPLOYMENT.md  GAP_ANALYSIS_ORACLE.md  LICENSE-SCHEMA.md  ORACLE_KEY_REGISTRY.md  ORACLE_WEBHOOK_AND_LOG.md
gad/: __init__.py  _engine_legacy.py  _io_legacy.py  _models_legacy.py  config.py  engine.py  io.py  models.py  oracle_models.py  pdf_export.py  pipeline.py  registry.py
oracle_ledger/: README.md  worker.js  wrangler.toml
schema/: trigger.schema.json
scripts/: audit_airport_city_distance.py  backfill_observations.py  fetch_bts_transtats.py  fetch_dgca_india.py  fetch_eurocontrol.py  fetch_historical_openaq.py  fetch_historical_openmeteo.py  fetch_opensky_zenodo.py  generate_oracle_keypair.py  hash_api_key.py  precompute_basis_risk.py  publish_oracle_key.py  restore_duckdb.py  seed_oracle_determination.py
supabase/: seed.sql
tests/: test_aqi_coordinates.py  test_basis_risk.py  test_import_hygiene.py  test_lloyds.py  test_monitor_fetcher.py  test_oracle.py  test_oracle_chain.py  test_reproducibility.py  test_risk_index.py  test_triggers.py
(+90 files in other folders)
